--- a/index.html
+++ b/index.html
@@ -10,205 +10,223 @@
 </head>
 
 <body>
-    <h1>许嵩</h1>
-    <section>
-        <h2>个人简介</h2>
-        <p>
-            许嵩（1986年5月14日－），中国大陆男歌手、词曲作者、音乐制作人。1986年出生于安徽省合肥市。2004年考入安徽医科大学，大学期间自修作曲及音乐制作，通过当时自己的博客发表音乐作品。
-        </p>
-    </section>
-    <section>
-        <h2>重要事件</h2>
-        <p>2006年起许嵩开始发表音乐作品，至2020年已成功发行七张个人原创专辑以及近四十首原创单曲，所有歌曲由许嵩创作词曲及音乐制作。截至2020年，许嵩已获得中歌榜、中国华鼎奖、东方风云榜、音乐风云榜等权威音乐榜单颁发的“最佳创作歌手奖”、“最佳唱作人奖”等个人奖项共19次；应邀为游戏、影视剧等创作主题曲包括《雨幕》（新天龙八部端游主题曲）、《千古》（电视剧《花千骨》片头曲）等歌曲共15首；五登央视舞台，七上卫视晚会献唱。
-        </p>
-    </section>
-    <section>
-        <h2>主要成就</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>获奖时间</th>
-                    <th>所获奖项</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2001年</td>
-                    <td>讯飞杯全国中学生网页设计大赛安徽赛区第一名</td>
-                </tr>
-                <tr>
-                    <td>2008年5月</td>
-                    <td>安徽省十佳青年学生</td>
-                </tr>
-                <tr>
-                    <td>2010年1月10日</td>
-                    <td>第4届腾讯网星光大典年度十大金曲《灰色头像》</td>
-                </tr>
-                <tr>
-                    <td>2011年10月15日</td>
-                    <td>第11届全球华语歌曲排行榜最受欢迎新人</td>
-                </tr>
-                <tr>
-                    <td>2011年11月24日</td>
-                    <td>第4届音乐风云榜新人盛典最受欢迎唱作新人</td>
-                </tr>
-                <tr>
-                    <td>2012年1月12日</td>
-                    <td>第6届腾讯星光大典内地年度男歌手</td>
-                </tr>
-                <tr>
-                    <td>2012年1月19日</td>
-                    <td>第19届中国歌曲排行榜年度金曲《想象之中》</td>
-                </tr>
-                <tr>
-                    <td>2012年4月7日</td>
-                    <td>第19届东方风云榜年度最佳唱作人</td>
-                </tr>
-                <tr>
-                    <td>2012年4月7日</td>
-                    <td>第19届东方风云榜年度金曲《想象之中》</td>
-                </tr>
-                <tr>
-                    <td>2012年4月23日</td>
-                    <td>第10届MusicRadio中国TOP排行榜年度推荐唱片《苏格拉没有底》</td>
-                </tr>
-                <tr>
-                    <td>2012年5月16日</td>
-                    <td>第9届亚太音乐榜最受欢迎唱作新锐大奖</td>
-                </tr>
-                <tr>
-                    <td>2012年5月16日</td>
-                    <td>第9届亚太音乐榜数位专辑销量榜冠军《苏格拉没有底》</td>
-                </tr>
-                <tr>
-                    <td>2012年8月13日</td>
-                    <td>Channel[V]华语咪咕榜中榜盛典爱心行动大使</td>
-                </tr>
-                <tr>
-                    <td>2012年12月8日</td>
-                    <td>第6届中国移动无线音乐咪咕汇音乐盛典最佳畅销网游金曲《天龙八部之宿敌》</td>
-                </tr>
-                <tr>
-                    <td>2012年12月10日</td>
-                    <td>2012亚洲时尚盛典年度时尚原创音乐人</td>
-                </tr>
-                <tr>
-                    <td>2012年12月29日</td>
-                    <td>第20届中国歌曲排行榜年度金曲《幻听》</td>
-                </tr>
-                <tr>
-                    <td>2013年3月30日</td>
-                    <td>第20届东方风云榜最佳唱作人</td>
-                </tr>
-                <tr>
-                    <td>2013年3月30日</td>
-                    <td>第20届东方风云榜年度十大金曲《幻听》</td>
-                </tr>
-                <tr>
-                    <td>2013年4月20日</td>
-                    <td>第17届全球华语榜中榜颁奖盛典传媒推荐歌手</td>
-                </tr>
-                <tr>
-                    <td>2013年12月8日</td>
-                    <td>第7届中国移动无线音乐咪咕汇最佳人气男歌手</td>
-                </tr>
-                <tr>
-                    <td>2014年12月15日</td>
-                    <td>第8届中国移动无线音乐咪咕汇年度网络最具人气男歌手</td>
-                </tr>
-                <tr>
-                    <td>2015年1月8日</td>
-                    <td>第14届中国华鼎奖华语年度最受欢迎原创歌手</td>
-                </tr>
-                <tr>
-                    <td>2015年3月25日</td>
-                    <td>第2届QQ音乐年度盛典年度创意专辑《不如吃茶去》</td>
-                </tr>
-                <tr>
-                    <td>2015年4月11日</td>
-                    <td>第3届音悦V榜年度创作歌手年度盛典</td>
-                </tr>
-                <tr>
-                    <td>2015年4月13日</td>
-                    <td>第15届音乐风云榜年度媒体关注内地歌手</td>
-                </tr>
-                <tr>
-                    <td>2015年4月23日</td>
-                    <td>2015酷音乐亚洲盛典年度最佳原创歌手</td>
-                </tr>
-                <tr>
-                    <td>2015年12月6日</td>
-                    <td>第9届中国移动咪咕汇十大畅销金曲《山水之间》</td>
-                </tr>
-                <tr>
-                    <td>2016年3月28日</td>
-                    <td>第23届东方风云榜最佳作曲奖《燕归巢》</td>
-                </tr>
-                <tr>
-                    <td>2016年9月27日</td>
-                    <td>2016亚洲新歌榜年度最佳唱作人</td>
-                </tr>
-                <tr>
-                    <td>2017年3月27日</td>
-                    <td>第24届东方风云榜最佳唱作人</td>
-                </tr>
-                <tr>
-                    <td>2017年3月27日</td>
-                    <td>第24届东方风云榜十大金曲《雅俗共赏》</td>
-                </tr>
-                <tr>
-                    <td>2017年4月9日</td>
-                    <td>第17届音乐风云榜年度最受关注原创歌手</td>
-                </tr>
-                <tr>
-                    <td>2018年1月13日</td>
-                    <td>2018唱吧嗨典年度最佳男歌手</td>
-                </tr>
-                <tr>
-                    <td>2018年8月29日</td>
-                    <td>2018华人歌曲音乐盛典年度最佳创作男歌手</td>
-                </tr>
-                <tr>
-                    <td>2018年8月29日</td>
-                    <td>2018华人歌曲音乐盛典年度金曲《老古董》</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <section>
-        <h2>主要作品</h2>
-        <ol>
-            <li>
-                <h4>音乐作品</h4>
-                <p>
-                    2009年独立出版首张词曲全创作专辑《自定义》，包揽了全部曲目的词曲创作及制作以及发行；2010年出版第二张词曲全创作专辑《寻雾启示》；
-                    2011年加盟海蝶音乐，推出第三张词曲全创作专辑《苏格拉没有底》；2012年7月发表第四张全创作专辑《梦游计》；2013年8月出版个人摄影随笔集《海上灵光》；2014年8月推出第五张全创作专辑《不如吃茶去》。[1]2016年4月发行第六张全创作专辑《青年晚报》。2018年7月12日发行第七张创作专辑《寻宝游戏》。
-                </p>
-            </li>
-            <li>
-                <h4>摄影作品</h4>
-                <p>于2013年8月1日正式发行的许嵩摄影集《海上灵光》。</p>
-            </li>
-            <li>
-                <h4>文学作品</h4>
-                <p>许嵩在个人网站（VaeCN及Vae+）、博客、微博、榕树下等多个平台发表过文章。其中《把伤痕当酒窝》被作为2008年江苏省高考语文模拟试卷的阅读题目[6]，并刊登于2011年12期《意林》。
-                </p>
-            </li>
-        </ol>
-    </section>
-    <section>
-        <h2>生活照</h2>
-        <div><img width="400" src="images/1.jpg" alt=""></div>
-        <div><img width="400" src="images/2.jpg" alt=""></div>
-        <div><img width="400" src="images/3.jpg" alt=""></div>
-    </section>
-    <h2>人物评价</h2>
-    <ul>
-        <li>许嵩的歌曲，个人的气息永远浓郁，让人一眼便可辨识。而许嵩本人，谦和、沉静、寡言，温和的像个邻家男孩。他罕有绯闻或博眼球版面的言论，以作品本身稳固乐坛地位。他在个人生活方面的这种低调，亦一直为人称道 。（西安文明网评）
-        </li>
-        <li>当越来越多的音乐人都开始往综艺节目的路线上去推销自己、维持曝光度时，许嵩依旧自我，始终把作品放在第一位，埋头创作、细心钻研。许嵩的音乐里面，有华语音乐才能独占的诗性。（腾讯网评）</li>
-        <li>许嵩的直抒胸臆、干脆利落的特殊演唱方式，令很多人被惊喜和感动到。他的复古风味，依然刻有浓浓的许氏情歌味道。感而不伤的唱法展现出了一个感性与理性交叠的自己。（网易娱乐评）</li>
-    </ul>
+    <div>
+        <nav>
+            <ol>
+                <li><a href="#vae">个人简介</a></li>
+                <li><a href="#events">重要事件</a></li>
+                <li><a href="#awards">主要成就</a></li>
+                <li><a href="#works">主要作品</a></li>
+                <li><a href="#pictures">生活照片</a></li>
+                <li><a href="#appraise">人物评价</a></li>
+            </ol>
+        </nav>
+    </div>
+    <div>
+        <h1>许嵩</h1>
+    </div>
+    <div>
+        <section>
+            <h2 id="vae">个人简介</h2>
+            <p>
+                许嵩（1986年5月14日－），中国大陆男歌手、词曲作者、音乐制作人。1986年出生于安徽省合肥市。2004年考入安徽医科大学，大学期间自修作曲及音乐制作，通过当时自己的博客发表音乐作品。
+            </p>
+        </section>
+        <section>
+            <h2 id="events">重要事件</h2>
+            <p>2006年起许嵩开始发表音乐作品，至2020年已成功发行七张个人原创专辑以及近四十首原创单曲，所有歌曲由许嵩创作词曲及音乐制作。截至2020年，许嵩已获得中歌榜、中国华鼎奖、东方风云榜、音乐风云榜等权威音乐榜单颁发的“最佳创作歌手奖”、“最佳唱作人奖”等个人奖项共19次；应邀为游戏、影视剧等创作主题曲包括《雨幕》（新天龙八部端游主题曲）、《千古》（电视剧《花千骨》片头曲）等歌曲共15首；五登央视舞台，七上卫视晚会献唱。
+            </p>
+        </section>
+        <section>
+            <h2 id="awards">主要成就</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>获奖时间</th>
+                        <th>所获奖项</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2001年</td>
+                        <td>讯飞杯全国中学生网页设计大赛安徽赛区第一名</td>
+                    </tr>
+                    <tr>
+                        <td>2008年5月</td>
+                        <td>安徽省十佳青年学生</td>
+                    </tr>
+                    <tr>
+                        <td>2010年1月10日</td>
+                        <td>第4届腾讯网星光大典年度十大金曲《灰色头像》</td>
+                    </tr>
+                    <tr>
+                        <td>2011年10月15日</td>
+                        <td>第11届全球华语歌曲排行榜最受欢迎新人</td>
+                    </tr>
+                    <tr>
+                        <td>2011年11月24日</td>
+                        <td>第4届音乐风云榜新人盛典最受欢迎唱作新人</td>
+                    </tr>
+                    <tr>
+                        <td>2012年1月12日</td>
+                        <td>第6届腾讯星光大典内地年度男歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2012年1月19日</td>
+                        <td>第19届中国歌曲排行榜年度金曲《想象之中》</td>
+                    </tr>
+                    <tr>
+                        <td>2012年4月7日</td>
+                        <td>第19届东方风云榜年度最佳唱作人</td>
+                    </tr>
+                    <tr>
+                        <td>2012年4月7日</td>
+                        <td>第19届东方风云榜年度金曲《想象之中》</td>
+                    </tr>
+                    <tr>
+                        <td>2012年4月23日</td>
+                        <td>第10届MusicRadio中国TOP排行榜年度推荐唱片《苏格拉没有底》</td>
+                    </tr>
+                    <tr>
+                        <td>2012年5月16日</td>
+                        <td>第9届亚太音乐榜最受欢迎唱作新锐大奖</td>
+                    </tr>
+                    <tr>
+                        <td>2012年5月16日</td>
+                        <td>第9届亚太音乐榜数位专辑销量榜冠军《苏格拉没有底》</td>
+                    </tr>
+                    <tr>
+                        <td>2012年8月13日</td>
+                        <td>Channel[V]华语咪咕榜中榜盛典爱心行动大使</td>
+                    </tr>
+                    <tr>
+                        <td>2012年12月8日</td>
+                        <td>第6届中国移动无线音乐咪咕汇音乐盛典最佳畅销网游金曲《天龙八部之宿敌》</td>
+                    </tr>
+                    <tr>
+                        <td>2012年12月10日</td>
+                        <td>2012亚洲时尚盛典年度时尚原创音乐人</td>
+                    </tr>
+                    <tr>
+                        <td>2012年12月29日</td>
+                        <td>第20届中国歌曲排行榜年度金曲《幻听》</td>
+                    </tr>
+                    <tr>
+                        <td>2013年3月30日</td>
+                        <td>第20届东方风云榜最佳唱作人</td>
+                    </tr>
+                    <tr>
+                        <td>2013年3月30日</td>
+                        <td>第20届东方风云榜年度十大金曲《幻听》</td>
+                    </tr>
+                    <tr>
+                        <td>2013年4月20日</td>
+                        <td>第17届全球华语榜中榜颁奖盛典传媒推荐歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2013年12月8日</td>
+                        <td>第7届中国移动无线音乐咪咕汇最佳人气男歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2014年12月15日</td>
+                        <td>第8届中国移动无线音乐咪咕汇年度网络最具人气男歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2015年1月8日</td>
+                        <td>第14届中国华鼎奖华语年度最受欢迎原创歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2015年3月25日</td>
+                        <td>第2届QQ音乐年度盛典年度创意专辑《不如吃茶去》</td>
+                    </tr>
+                    <tr>
+                        <td>2015年4月11日</td>
+                        <td>第3届音悦V榜年度创作歌手年度盛典</td>
+                    </tr>
+                    <tr>
+                        <td>2015年4月13日</td>
+                        <td>第15届音乐风云榜年度媒体关注内地歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2015年4月23日</td>
+                        <td>2015酷音乐亚洲盛典年度最佳原创歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2015年12月6日</td>
+                        <td>第9届中国移动咪咕汇十大畅销金曲《山水之间》</td>
+                    </tr>
+                    <tr>
+                        <td>2016年3月28日</td>
+                        <td>第23届东方风云榜最佳作曲奖《燕归巢》</td>
+                    </tr>
+                    <tr>
+                        <td>2016年9月27日</td>
+                        <td>2016亚洲新歌榜年度最佳唱作人</td>
+                    </tr>
+                    <tr>
+                        <td>2017年3月27日</td>
+                        <td>第24届东方风云榜最佳唱作人</td>
+                    </tr>
+                    <tr>
+                        <td>2017年3月27日</td>
+                        <td>第24届东方风云榜十大金曲《雅俗共赏》</td>
+                    </tr>
+                    <tr>
+                        <td>2017年4月9日</td>
+                        <td>第17届音乐风云榜年度最受关注原创歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2018年1月13日</td>
+                        <td>2018唱吧嗨典年度最佳男歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2018年8月29日</td>
+                        <td>2018华人歌曲音乐盛典年度最佳创作男歌手</td>
+                    </tr>
+                    <tr>
+                        <td>2018年8月29日</td>
+                        <td>2018华人歌曲音乐盛典年度金曲《老古董》</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2 id="works">主要作品</h2>
+            <ol>
+                <li>
+                    <h4>音乐作品</h4>
+                    <p>
+                        2009年独立出版首张词曲全创作专辑《自定义》，包揽了全部曲目的词曲创作及制作以及发行；2010年出版第二张词曲全创作专辑《寻雾启示》；
+                        2011年加盟海蝶音乐，推出第三张词曲全创作专辑《苏格拉没有底》；2012年7月发表第四张全创作专辑《梦游计》；2013年8月出版个人摄影随笔集《海上灵光》；2014年8月推出第五张全创作专辑《不如吃茶去》。[1]2016年4月发行第六张全创作专辑《青年晚报》。2018年7月12日发行第七张创作专辑《寻宝游戏》。
+                    </p>
+                </li>
+                <li>
+                    <h4>摄影作品</h4>
+                    <p>于2013年8月1日正式发行的许嵩摄影集《海上灵光》。</p>
+                </li>
+                <li>
+                    <h4>文学作品</h4>
+                    <p>许嵩在个人网站（VaeCN及Vae+）、博客、微博、榕树下等多个平台发表过文章。其中《把伤痕当酒窝》被作为2008年江苏省高考语文模拟试卷的阅读题目[6]，并刊登于2011年12期《意林》。
+                    </p>
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h2 id="pictures">生活照片</h2>
+            <div><img width="400" src="images/1.jpg" alt=""></div>
+            <div><img width="400" src="images/2.jpg" alt=""></div>
+            <div><img width="400" src="images/3.jpg" alt=""></div>
+        </section>
+        <section>
+            <h2 id="appraise">人物评价</h2>
+            <ul>
+                <li>许嵩的歌曲，个人的气息永远浓郁，让人一眼便可辨识。而许嵩本人，谦和、沉静、寡言，温和的像个邻家男孩。他罕有绯闻或博眼球版面的言论，以作品本身稳固乐坛地位。他在个人生活方面的这种低调，亦一直为人称道
+                    。（西安文明网评）</li>
+                <li>当越来越多的音乐人都开始往综艺节目的路线上去推销自己、维持曝光度时，许嵩依旧自我，始终把作品放在第一位，埋头创作、细心钻研。许嵩的音乐里面，有华语音乐才能独占的诗性。（腾讯网评）</li>
+                <li>许嵩的直抒胸臆、干脆利落的特殊演唱方式，令很多人被惊喜和感动到。他的复古风味，依然刻有浓浓的许氏情歌味道。感而不伤的唱法展现出了一个感性与理性交叠的自己。（网易娱乐评）</li>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
