--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>许嵩</title>
+    <style>
+        img {
+            max-width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -213,9 +217,9 @@
         </section>
         <section>
             <h2 id="pictures">生活照片</h2>
-            <div><img width="400" src="images/1.jpg" alt=""></div>
-            <div><img width="400" src="images/2.jpg" alt=""></div>
-            <div><img width="400" src="images/3.jpg" alt=""></div>
+            <div><a href="images/1.jpg" target="_blank"><img width="400" src="images/1.jpg" alt="图1"></a></div>
+            <div><a href="images/2.jpg" target="_blank"><img width="400" src="images/2.jpg" alt="图2"></a></div>
+            <div><a href="images/3.jpg" target="_blank"><img width="400" src="images/3.jpg" alt="图3"></a></div>
         </section>
         <section>
             <h2 id="appraise">人物评价</h2>
